<resources>
    <string name="app_name">Calculator</string>

    <!-- button labels -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="division">÷</string>
    <string name="multiply">*</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="right_bracket">)</string>
    <string name="left_bracket">(</string>

    <string name="clear_all">C</string>
    <string name="clear_one">⌫</string>


    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="arcSin">sin<sup><small>-1</small></sup></string>
    <string name="arcCos">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTan">tan<sup><small>-1</small></sup></string>
    <string name="naturalLog">ln</string>
    <string name="log">log</string>
    <string name="squareRoot">√</string>
    <string name="absoluteValue">|x|</string>
    <string name="pi">π</string>
    <string name="e">e</string>
    <string name="xSquared">x<sup><small>2</small></sup></string>
    <string name="xPowerY">x<sup><small>y</small></sup></string>
    <string name="isPrimeFunction">prime</string>
</resources>